feat: Beginning of header and footer implementation

--- a/index.html
+++ b/index.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Desafio 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="logo">LOGO</div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="error.html">About us</a></li>
+                <li><a href="error.html">Portfolio</a></li>
+                <li><a href="error.html">News</a></li>
+                <li><a href="contact.html" class="contact-button">Contact us</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <footer>
+        <div class="footer-logo">LOGO</div>
+        <div class="footer-text">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis laoreet felis urna.</p>
+            <p>Logo</p>
+        </div>
+        <div class="footer-links">
+            <h3>About us</h3>
+            <ul>
+                <li><a href="error.html">Zeux</a></li>
+                <li><a href="error.html">Portfolio</a></li>
+                <li><a href="error.html">Careers</a></li>
+                <li><a href="contact.html">Contact us</a></li>
+            </ul>
+        </div>
+        <div class="footer-contact">
+            <h3>Contact us</h3>
+            <p>Ut consequat pharetra condimentum. Vestibulum viverra dui ac metus viverra varius.</p>
+            <p>+908 89097 890</p>
+        </div>
+        <div class="footer-social">
+            <a href="https://www.facebook.com" target="_blank">Facebook</a>
+            <a href="https://www.instagram.com" target="_blank">Instagram</a>
+            <a href="https://www.twitter.com" target="_blank">Twitter</a>
+            <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+        </div>
+        <p>Copyright © 2022 prodesigner All Rights Reserved</p>
+    </footer>
+
     <script type="module" src="script.js"></script>
 </body>
 </html>
