feat: Added style to the header and footer. And added images to the project.

--- a/index.html
+++ b/index.html
@@ -8,45 +8,72 @@
 </head>
 <body>
     <header>
-        <div class="logo">LOGO</div>
+        <a href="index.html" class="logo-link">
+            <div class="logo">LOGO</div>
+        </a> 
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="error.html">About us</a></li>
-                <li><a href="error.html">Portfolio</a></li>
-                <li><a href="error.html">News</a></li>
+                <li><a href="index.html" class="contact-header">Home</a></li>
+                <li><a href="error.html" class="contact-header">About us</a></li>
+                <li><a href="error.html" class="contact-header">Portfolio</a></li>
+                <li><a href="error.html" class="contact-header">News</a></li>
                 <li><a href="contact.html" class="contact-button">Contact us</a></li>
             </ul>
+
         </nav>
     </header>
 
+    <main>
+        <section class="hero">
+            <h1>Work that we produce for our clients</h1>
+            <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum has been the industry's standard.</p>
+            <button>Get more details</button>
+            <div class="logos">
+                <img src="images/joy_stick.png" alt="CryEngine">
+            </div>
+        </section>
+        
+        <section class="trending-games">
+            <h2>Currently Trending Games</h2>
+            <div class="games">
+            </div>
+            <button>See All</button>
+        </section>
+        
+    </main>
+
     <footer>
-        <div class="footer-logo">LOGO</div>
-        <div class="footer-text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis laoreet felis urna.</p>
-            <p>Logo</p>
+        <div class="footer-content">
+            <div class="footer-text">
+                <h2>LOGO</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Integer sed interdum metus. Fusce et diam a ligula auctor <br>ullamcorper eu vitae nunc.</p>
+                <div>@Logo</div>
+            </div>
+            <div class="footer-links">
+                <h3>About us</h3>
+                <ul>
+                    <li><a href="error.html">Zeux</a></li>
+                    <li><a href="error.html">Portfolio</a></li>
+                    <li><a href="error.html">Careers</a></li>
+                    <li><a href="contact.html">Contact us</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h3>Contact us</h3>
+                <p>Ut consequat pharetra condimentum. Vestibulum viverra dui ac. 
+                    <br> Nunc at urna vitae nisl ultricies scelerisque vitae in mauris. <br>Duis rhoncus magna imperdiet quam pulvinar feugiat.</p>
+                <p>+908 89097 890</p>
+            </div>
+            <div class="footer-social">
+                <a href="https://www.facebook.com"><img src="images/facebook.png" class="media-object" alt="facebook"></a>
+                <a href="https://www.instagram.com"><img src="images/instagram.png" class="media-object" alt="instagram"></a>
+                <a href="https://www.twitter.com"><img src="images/twitter.png" class="media-object" alt="twitter"></a>
+                <a href="https://www.linkedin.com"><img src="images/linkedin.png" class="media-object" alt="linkedin"></a>
+            </div>
+            <div class="footer-bottom">
+                &copy; 2022 prodesigner | All rights reserved
+            </div>
         </div>
-        <div class="footer-links">
-            <h3>About us</h3>
-            <ul>
-                <li><a href="error.html">Zeux</a></li>
-                <li><a href="error.html">Portfolio</a></li>
-                <li><a href="error.html">Careers</a></li>
-                <li><a href="contact.html">Contact us</a></li>
-            </ul>
-        </div>
-        <div class="footer-contact">
-            <h3>Contact us</h3>
-            <p>Ut consequat pharetra condimentum. Vestibulum viverra dui ac metus viverra varius.</p>
-            <p>+908 89097 890</p>
-        </div>
-        <div class="footer-social">
-            <a href="https://www.facebook.com" target="_blank">Facebook</a>
-            <a href="https://www.instagram.com" target="_blank">Instagram</a>
-            <a href="https://www.twitter.com" target="_blank">Twitter</a>
-            <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
-        </div>
-        <p>Copyright © 2022 prodesigner All Rights Reserved</p>
     </footer>
 
     <script type="module" src="script.js"></script>
