feat: Starting to add style to the introduction part

--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Contact Us</title>
 </head>
-<body>
-    <h1>Contact Us</h1>
-    <p><a href="index.html">Return to Home Page</a></p>
+<body>  
+    <header>
+        <a href="index.html" class="logo-link">
+            <div class="logo">LOGO</div>
+        </a> 
+        <nav>
+            <ul>
+                <li><a href="index.html" class="contact-header">Home</a></li>
+                <li><a href="error.html" class="contact-header">About us</a></li>
+                <li><a href="error.html" class="contact-header">Portfolio</a></li>
+                <li><a href="error.html" class="contact-header">News</a></li>
+                <li><a href="contact.html" class="contact-button">Contact us</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Contact Us</h1>
+        <p><a href="index.html">Return to Home Page</a></p>
+    </main>
+    
+    <footer>
+        <div class="footer-content">
+            <div class="footer-text">
+                <h2>LOGO</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Integer sed interdum metus. Fusce et diam a ligula auctor <br>ullamcorper eu vitae nunc.</p>
+                <div>@Logo</div>
+            </div>
+            <div class="footer-links">
+                <h3>About us</h3>
+                <ul>
+                    <li><a href="error.html">Zeux</a></li>
+                    <li><a href="error.html">Portfolio</a></li>
+                    <li><a href="error.html">Careers</a></li>
+                    <li><a href="contact.html">Contact us</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h3>Contact us</h3>
+                <p>Ut consequat pharetra condimentum. Vestibulum viverra dui ac. 
+                    <br> Nunc at urna vitae nisl ultricies scelerisque vitae in mauris. <br>Duis rhoncus magna imperdiet quam pulvinar feugiat.</p>
+                <p>+908 89097 890</p>
+            </div>
+            <div class="footer-social">
+                <a href="https://www.facebook.com"><img src="images/facebook.png" class="media-object" alt="facebook"></a>
+                <a href="https://www.instagram.com"><img src="images/instagram.png" class="media-object" alt="instagram"></a>
+                <a href="https://www.twitter.com"><img src="images/twitter.png" class="media-object" alt="twitter"></a>
+                <a href="https://www.linkedin.com"><img src="images/linkedin.png" class="media-object" alt="linkedin"></a>
+            </div>
+            <div class="footer-bottom">
+                &copy; 2022 prodesigner | All rights reserved
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
