fix: fixed the nav bar

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
             <div class="logo">LOGO</div>
         </a> 
         <nav>
-            <ul>
+            <ul class="nav">
                 <li><a href="index.html" class="contact-header">Home</a></li>
                 <li><a href="error.html" class="contact-header">About us</a></li>
                 <li><a href="error.html" class="contact-header">Portfolio</a></li>
