--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
             <div class="logo">LOGO</div>
         </a> 
         <nav>
-            <ul>
+            <ul class="nav">
                 <li><a href="index.html" class="contact-header">Home</a></li>
                 <li><a href="error.html" class="contact-header">About us</a></li>
                 <li><a href="error.html" class="contact-header">Portfolio</a></li>
                 <li><a href="error.html" class="contact-header">News</a></li>
                 <li><a href="contact.html" class="contact-button">Contact us</a></li>
             </ul>
-
         </nav>
     </header>
 
