fix: adjust elements in the header

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 <li><a href="contact.html" class="contact-button">Contact us</a></li>
             </ul>
         </nav>
+        <!--<div class="img-controller">
+            <img src="images/joy_stick.png" alt="controller with que the engines 'unity', 'cryengine' and 'unreal' above him">
+        </div>-->
     </header>
 
     <main>
@@ -29,10 +32,6 @@
                 <h1>Work that we <br>produce for our <br>clients</h1>
                 <p>Lorem ipsum is simply dummy text of the printing and <br>typesetting industry. Lorem ipsum has been the industry's <br>standard.</p>
             <button class="controller-button" onclick="window.location.href='error.html'">Get more details</button>
-            </div>
-            
-            <div class="logos">
-                <img src="images/joy_stick.png" alt="controller with que the engines 'unity', 'cryengine' and 'unreal' above him">
             </div>
         </section>
         
