--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
                 </ul>
             </div>
         </section>
+
+        <section class="spider">
+            <div>
+                <h2>Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</h2>
+                <div class="spider-content">
+                    <div class="spider-text">
+                        <h3>Lorem Ipsum</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting <br>industry. Lorem Ipsum has been the industry's standard dummy text <br>ever since the 1500s.</p>
+                    </div>
+                    <div class="spider-images">
+                        <img src="images/img-spider.png" alt="Spider-Man in free fall opening his arms" class="img-banner">
+                        <img src="images/img-balls.png" class="img-balls">
+                    </div>
+                </div>
+            </div>
+        </section>
         
     </main>
 
