Feat: Starting the development section and adding images for the section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!--------------------header----------------------->
+
     <header>
         <a href="index.html" class="logo-link">
             <div class="logo">LOGO</div>
@@ -20,10 +23,12 @@
                 <li><a href="contact.html" class="contact-button">Contact us</a></li>
             </ul>
         </nav>
-        <!--<div class="img-controller">
+        <div class="img-controller">
             <img src="images/joy_stick.png" alt="controller with que the engines 'unity', 'cryengine' and 'unreal' above him">
-        </div>-->
+        </div>
     </header>
+
+    <!--------------------main----------------------->
 
     <main>
         <section class="controller">
@@ -76,6 +81,45 @@
         
     </main>
 
+    <section class="mountain">
+        <div class="text-mountain">
+            <h3>Lorem Ipsum is simply dummy text of the printing<br>and typesetting industry.</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the <br>industry's standard dummy text ever since the 1500s.</p>
+        </div>
+        <div class="icons-mountain-top">
+            <img src="icons/icon-cell.png" alt="cellphone icon">
+            <img src="icons/icon-desktop.png" alt="desktop icon">
+            <img src="icons/icon-ps4.png" alt="ps4 icon">
+            <img src="icons/icon-guy.png" alt="guy with snow glasses icon">
+        </div>
+        <ul class="text-top">
+            <li class="top-list">Mobile Game Development</li>
+            <li class="top-list">PC Game Development</li>
+            <li class="top-list">PS4 Game Development</li>
+            <li class="top-list">AR/VR Solutions</li>
+            
+        </ul>
+        <div class="arrow-top">
+            <img src="icons/icon-arrow.png">
+            <img src="icons/icon-arrow.png">
+            <img src="icons/icon-arrow.png">
+            <img src="icons/icon-arrow.png">
+        </div>
+        <div class="icons-mountain-bot">
+            <img src="icons/icon-tv.png" alt="tv icon">
+            <img src="icons/icon-cube.png" alt="cube icon">
+        </div>
+        <ul class="text-bot">
+            <li class="bot-list">AR/ VR design</li>
+            <li class="bot-list">3D Modelings</li> 
+        </ul>
+        <div class="arrow-bot">
+            <img src="icons/icon-arrow.png">
+            <img src="icons/icon-arrow.png">
+        </div>
+    </section>
+
+    <!--------------------footer----------------------->
     <footer>
         <div class="footer-content">
             <div class="footer-text">
