feat: implementation of the subscribe section

--- a/index.html
+++ b/index.html
@@ -131,8 +131,22 @@
         </section>
 
         <!--------------------Section 6----------------------->
-        <section>
-
+        <section class="subscription">
+            <div class="tittle-subscription">
+                <h2>Lorem Ipsum</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting <br>industry.</p>
+            </div>
+            <div class="box-subscription">
+                <div class="text-subscription">
+                    <h2>Stay in the loop</h2>
+                    <p>Subscribe to receive the latest news and updates about TDA.
+                        <br>We promise not to spam you! </p>
+                </div>
+                <div class="input-subscription">
+                    <input type="email" placeholder="Enter email address">
+                    <button>Continue</button>
+                </div>
+            </div>
         </section>
     </main>
 
