style: adjusting the footer margins

--- a/contact.html
+++ b/contact.html
@@ -128,8 +128,7 @@
         <div class="footer-content">
             <div class="footer-text">
                 <h2>LOGO</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Integer sed interdum metus. Fusce et
-                    diam a ligula auctor <br>ullamcorper eu vitae nunc.</p>
+                <p>LLorem Ipsum is simply dummy text of the <br>printing and typesetting industry.
                 <div>@Logo</div>
             </div>
             <div class="footer-links">
@@ -143,10 +142,7 @@
             </div>
             <div class="footer-contact">
                 <h3>Contact us</h3>
-                <p>Ut consequat pharetra condimentum. Vestibulum viverra dui ac.
-                    <br> Nunc at urna vitae nisl ultricies scelerisque vitae in mauris. <br>Duis rhoncus magna imperdiet
-                    quam pulvinar feugiat.
-                </p>
+                <p>Lorem Ipsum is simply dummy text <br>of the printing and typesetting <br>industry.
                 <p>+908 89097 890</p>
             </div>
             <div class="footer-social">
