--- a/error.html
+++ b/error.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Error page</title>
+    <link rel="stylesheet" href="styles/error.css">
 </head>
 <body>
-    <h1>Error 404: Page Not Found</h1>
-    <p>Sorry, the page you are looking for does not exist.</p>
-    <p><a href="index.html">Return to Home Page</a></p>
+    <div class="error-message">
+        <h1>Error</h1>
+        <p>Sorry, the page you are looking for does not exist.</p>
+        <div class="error-links">
+            <p><a href="index.html">Home</a></p>
+            <p>|</p>
+            <p><a href="contact.html">Contact Us</a></p>
+        </div>
+        
+    </div>
 </body>
 </html>
