--- a/error.html
+++ b/error.html
@@ -5,17 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error page</title>
     <link rel="stylesheet" href="styles/error.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/footer.css">
 </head>
 <body>
-    <div class="error-message">
-        <h1>Error</h1>
-        <p>Sorry, the page you are looking for does not exist.</p>
-        <div class="error-links">
-            <p><a href="index.html">Home</a></p>
-            <p>|</p>
-            <p><a href="contact.html">Contact Us</a></p>
+    <header>
+        <a href="index.html" class="logo-link">
+            <div class="logo">LOGO</div>
+        </a>
+        <nav>
+            <ul class="nav">
+                <li><a href="pages/index" class="contact-header">Home</a></li>
+                <li><a href="error.html" class="contact-header">About us</a></li>
+                <li><a href="error.html" class="contact-header">Portfolio</a></li>
+                <li><a href="error.html" class="contact-header">News</a></li>
+                <li><a href="contact.html" class="contact-button">Contact us</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="error-message-container">
+            <div class="error-message">
+            <h1>Error</h1>
+            <p>Sorry, the page you are looking for does not exist.</p>
+            <div class="error-links">
+                <p><a href="index.html">Home</a></p>
+                <p><a href="contact.html">Contact Us</a></p>
+            </div>
         </div>
-        
-    </div>
+        </section>   
+    </main>
+    
+    <footer>
+        <div class="footer-content">
+            <div class="footer-text">
+                <h2>LOGO</h2>
+                <p>Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry. 
+                <div>@Logo</div>
+            </div>
+            <div class="footer-links">
+                <h3>About us</h3>
+                <ul>
+                    <li><a href="error.html">Zeux</a></li>
+                    <li><a href="error.html">Portfolio</a></li>
+                    <li><a href="error.html">Careers</a></li>
+                    <li><a href="contact.html">Contact us</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h3>Contact us</h3>
+                <p>Lorem Ipsum is simply dummy text <br>of the printing and typesetting <br>industry. 
+                </p>
+                <p>+908 89097 890</p>
+            </div>
+            <div class="footer-social">
+                <a href="https://www.facebook.com"><img src="images/facebook.png" class="media-object"
+                        alt="facebook"></a>
+                <a href="https://www.instagram.com"><img src="images/instagram.png" class="media-object"
+                        alt="instagram"></a>
+                <a href="https://www.twitter.com"><img src="images/twitter.png" class="media-object" alt="twitter"></a>
+                <a href="https://www.linkedin.com"><img src="images/linkedin.png" class="media-object"
+                        alt="linkedin"></a>
+            </div>
+            <div class="footer-bottom">
+                &copy; 2022 prodesigner | All rights reserved
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
