--- a/contact.html
+++ b/contact.html
@@ -67,35 +67,35 @@
         
         <!--------------------section 2----------------------->
         </section >
-        <div class="form">
-            <div class="title-form">
-                <h1>Say hello</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing.</p>
-            </div>
-            <form class="contact-form" action="submit_form.php" method="post">
-                <div class="form-group inline">
-                    <div>
-                        <label for="first-name">First Name</label>
-                        <input type="text" id="first-name" name="first-name" required>
+            <div class="form">
+                <div class="title-form">
+                    <h1>Say hello</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                </div>
+                <form class="contact-form" action="submit_form.php" method="post">
+                    <div class="form-group inline">
+                        <div>
+                            <label for="first-name">First Name</label>
+                            <input type="text" id="first-name" name="first-name" required>
+                        </div>
+                        <div>
+                            <label for="last-name">Last Name</label>
+                            <input type="text" id="last-name" name="last-name" required>
+                        </div>
                     </div>
-                    <div>
-                        <label for="last-name">Last Name</label>
-                        <input type="text" id="last-name" name="last-name" required>
+                    <div class="form-group">
+                        <label for="email">Email Address</label>
+                        <input type="email" id="email" name="email" required>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email Address</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" rows="5" required></textarea>
-                </div>
-                <div class="form-group button-group">
-                    <button type="submit">Get in Touch</button>
-                </div>
-            </form>
-        </div> 
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+                    </div>
+                    <div class="form-group button-group">
+                        <button type="submit">Get in Touch</button>
+                    </div>
+                </form>
+            </div> 
         <section>
 
         </section>
@@ -156,6 +156,6 @@
             </div>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="js/form.js"></script>
 </body>
 </html>
