--- a/success.html
+++ b/success.html
@@ -8,22 +8,9 @@
 </head>
 <body>
     <div class="success-message">
-        <h1>Success!</h1>
-        <p>First Name: <span id="first-name"></span></p>
-        <p>Last Name: <span id="last-name"></span></p>
-        <p>Email: <span id="email"></span></p>
-        <p>Message: <span id="message"></span></p>
-        <p><a href="index.html">Home</a></p>
-        <p><a href="contact.html">Contact Us</a></p>
+        <h1>Form Submitted Successfully!</h1>
+        <p>Thank you for getting in touch. We will get back to you soon.</p>
     </div>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const formData = JSON.parse(localStorage.getItem("formData"));
-            document.getElementById("first-name").textContent = formData.firstName;
-            document.getElementById("last-name").textContent = formData.lastName;
-            document.getElementById("email").textContent = formData.email;
-            document.getElementById("message").textContent = formData.message;
-        });
-    </script>
+    <script src="js/success.js"></script>
 </body>
 </html>
