--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Desafio 1</title>
-    <link rel="stylesheet" href="styles/contact.css">
-    <link rel="stylesheet" href="styles/home.css">
-    <link rel="stylesheet" href="styles/footer.css">
-    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="../styles/contact.css">
+    <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/subscription.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -18,16 +19,16 @@
     <!--------------------header----------------------->
 
     <header>
-        <a href="index.html" class="logo-link">
+        <a href="../pages/index.html" class="logo-link">
             <div class="logo">LOGO</div>
         </a>
         <nav>
             <ul class="nav">
-                <li><a href="index.html" class="contact-header">Home</a></li>
-                <li><a href="error.html" class="contact-header">About us</a></li>
-                <li><a href="error.html" class="contact-header">Portfolio</a></li>
-                <li><a href="error.html" class="contact-header">News</a></li>
-                <li><a href="contact.html" class="contact-button">Contact us</a></li>
+                <li><a href="../pages/index.html" class="contact-header">Home</a></li>
+                <li><a href="../pages/error.html" class="contact-header">About us</a></li>
+                <li><a href="../pages/error.html" class="contact-header">Portfolio</a></li>
+                <li><a href="../pages/error.html" class="contact-header">News</a></li>
+                <li><a href="../pages/contact.html" class="contact-button">Contact us</a></li>
             </ul>
         </nav>
     </header>
@@ -43,24 +44,24 @@
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
             </div>
             <div class="world-map">
-                <img src="images/Huge Global.png" alt="">
+                <img src="../images/Huge Global.png" alt="">
             </div>
             <div class="contact-section">
                 <div class="follow-us">
                     <p>Follow us</p>
-                    <a href="https://www.facebook.com"><img src="images/facebook-black.png" class="media-object" alt="facebook"></a>
-                    <a href="https://www.instagram.com"><img src="images/instagram-black.png" class="media-object" alt="instagram"></a>
-                    <a href="https://www.twitter.com"><img src="images/twitter-black.png" class="media-object" alt="twitter"></a>
-                    <a href="https://www.linkedin.com"><img src="images/linkedin-black.png" class="media-object" alt="linkedin"></a>
+                    <a href="https://www.facebook.com"><img src="../images/facebook-black.png" class="media-object" alt="facebook"></a>
+                    <a href="https://www.instagram.com"><img src="../images/instagram-black.png" class="media-object" alt="instagram"></a>
+                    <a href="https://www.twitter.com"><img src="../images/twitter-black.png" class="media-object" alt="twitter"></a>
+                    <a href="https://www.linkedin.com"><img src="../images/linkedin-black.png" class="media-object" alt="linkedin"></a>
                 </div>
-                <img src="images/Line.png" alt="">
+                <img src="../images/Line.png" alt="">
                 <div class="contact-info">
-                    <img src="images/fone.png" class="icon" alt="phone">
+                    <img src="../images/fone.png" class="icon" alt="phone">
                     <span>+94 4444 5555 6</span>
                 </div>
-                <img src="images/Line.png" alt="">
+                <img src="../images/Line.png" alt="">
                 <div class="location-info">
-                    <img src="images/gps.png" class="icon" alt="location">
+                    <img src="../images/gps.png" class="icon" alt="location">
                     <span>but also the leap into electronic <br>typesetting</span>
                 </div>
             </div>
@@ -114,15 +115,12 @@
                         <br>We promise not to spam you! </p>
                 </div>
                 <div class="input-subscription">
-                    <input type="email" placeholder="Enter email address">
-                    <button>Continue</button>
+                    <input type="email" id="subscription-email" placeholder="Enter email address">
+                    <button id="subscription-button" disabled>Continue</button>
                 </div>
             </div>
         </section>
     </main>
-
-
-
      <!--------------------footer----------------------->
      <footer>
         <div class="footer-content">
@@ -134,10 +132,10 @@
             <div class="footer-links">
                 <h3>About us</h3>
                 <ul>
-                    <li><a href="error.html">Zeux</a></li>
-                    <li><a href="error.html">Portfolio</a></li>
-                    <li><a href="error.html">Careers</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
+                    <li><a href="../pages/error.html">Zeux</a></li>
+                    <li><a href="../pages/error.html">Portfolio</a></li>
+                    <li><a href="../pages/error.html">Careers</a></li>
+                    <li><a href="../pages/contact.html">Contact us</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
@@ -146,16 +144,17 @@
                 <p>+908 89097 890</p>
             </div>
             <div class="footer-social">
-                <a href="https://www.facebook.com"><img src="images/facebook.png" class="media-object" alt="facebook"></a>
-                <a href="https://www.instagram.com"><img src="images/instagram.png" class="media-object" alt="instagram"></a>
-                <a href="https://www.twitter.com"><img src="images/twitter.png" class="media-object" alt="twitter"></a>
-                <a href="https://www.linkedin.com"><img src="images/linkedin.png" class="media-object" alt="linkedin"></a>
+                <a href="https://www.facebook.com"><img src="../images/facebook.png" class="media-object" alt="facebook"></a>
+                <a href="https://www.instagram.com"><img src="../images/instagram.png" class="media-object" alt="instagram"></a>
+                <a href="https://www.twitter.com"><img src="../images/twitter.png" class="media-object" alt="twitter"></a>
+                <a href="https://www.linkedin.com"><img src="../images/linkedin.png" class="media-object" alt="linkedin"></a>
             </div>
             <div class="footer-bottom">
                 &copy; 2022 prodesigner | All rights reserved
             </div>
         </div>
     </footer>
-    <script src="js/form.js"></script>
+    <script src="../js/form.js"></script>
+    <script src="../js/subscription.js"></script>
 </body>
 </html>
