--- a/pages/error.html
+++ b/pages/error.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error page</title>
-    <link rel="stylesheet" href="styles/error.css">
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="../styles/error.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/footer.css">
 </head>
 <body>
     <header>
-        <a href="index.html" class="logo-link">
+        <a href="../pages/index.html" class="logo-link">
             <div class="logo">LOGO</div>
         </a>
         <nav>
             <ul class="nav">
-                <li><a href="pages/index" class="contact-header">Home</a></li>
-                <li><a href="error.html" class="contact-header">About us</a></li>
-                <li><a href="error.html" class="contact-header">Portfolio</a></li>
-                <li><a href="error.html" class="contact-header">News</a></li>
-                <li><a href="contact.html" class="contact-button">Contact us</a></li>
+                <li><a href="../pages/index.html" class="contact-header">Home</a></li>
+                <li><a href="../pages/error.html" class="contact-header">About us</a></li>
+                <li><a href="../pages/error.html" class="contact-header">Portfolio</a></li>
+                <li><a href="../pages/error.html" class="contact-header">News</a></li>
+                <li><a href="../pages/contact.html" class="contact-button">Contact us</a></li>
             </ul>
         </nav>
     </header>
@@ -30,8 +30,8 @@
             <h1>Error</h1>
             <p>Sorry, the page you are looking for does not exist.</p>
             <div class="error-links">
-                <p><a href="index.html">Home</a></p>
-                <p><a href="contact.html">Contact Us</a></p>
+                <p><a href="../pages/index.html">Home</a></p>
+                <p><a href="../pages/contact.html">Contact Us</a></p>
             </div>
         </div>
         </section>   
@@ -47,10 +47,10 @@
             <div class="footer-links">
                 <h3>About us</h3>
                 <ul>
-                    <li><a href="error.html">Zeux</a></li>
-                    <li><a href="error.html">Portfolio</a></li>
-                    <li><a href="error.html">Careers</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
+                    <li><a href="../pages/error.html">Zeux</a></li>
+                    <li><a href="../pages/error.html">Portfolio</a></li>
+                    <li><a href="../pages/error.html">Careers</a></li>
+                    <li><a href="../pages/contact.html">Contact us</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
@@ -60,12 +60,12 @@
                 <p>+908 89097 890</p>
             </div>
             <div class="footer-social">
-                <a href="https://www.facebook.com"><img src="images/facebook.png" class="media-object"
+                <a href="https://www.facebook.com"><img src="../images/facebook.png" class="media-object"
                         alt="facebook"></a>
-                <a href="https://www.instagram.com"><img src="images/instagram.png" class="media-object"
+                <a href="https://www.instagram.com"><img src="../images/instagram.png" class="media-object"
                         alt="instagram"></a>
-                <a href="https://www.twitter.com"><img src="images/twitter.png" class="media-object" alt="twitter"></a>
-                <a href="https://www.linkedin.com"><img src="images/linkedin.png" class="media-object"
+                <a href="https://www.twitter.com"><img src="../images/twitter.png" class="media-object" alt="twitter"></a>
+                <a href="https://www.linkedin.com"><img src="../images/linkedin.png" class="media-object"
                         alt="linkedin"></a>
             </div>
             <div class="footer-bottom">
