--- a/pages/index.html
+++ b/pages/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Desafio 1</title>
-    <link rel="stylesheet" href="styles/home.css">
-    <link rel="stylesheet" href="styles/footer.css">
-    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/subscription.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -18,20 +19,20 @@
     <!--------------------header----------------------->
 
     <header>
-        <a href="index.html" class="logo-link">
+        <a href="../pages/index.html" class="logo-link">
             <div class="logo">LOGO</div>
         </a>
         <nav>
             <ul class="nav">
-                <li><a href="pages/index" class="contact-header">Home</a></li>
-                <li><a href="error.html" class="contact-header">About us</a></li>
-                <li><a href="error.html" class="contact-header">Portfolio</a></li>
-                <li><a href="error.html" class="contact-header">News</a></li>
-                <li><a href="contact.html" class="contact-button">Contact us</a></li>
+                <li><a href="../pages/index.html" class="contact-header">Home</a></li>
+                <li><a href="../pages/error.html" class="contact-header">About us</a></li>
+                <li><a href="../pages/error.html" class="contact-header">Portfolio</a></li>
+                <li><a href="../pages/error.html" class="contact-header">News</a></li>
+                <li><a href="../pages/contact.html" class="contact-button">Contact us</a></li>
             </ul>
         </nav>
         <div class="img-controller">
-            <img src="images/joy_stick.png"
+            <img src="../images/joy_stick.png"
                 alt="controller with que the engines 'unity', 'cryengine' and 'unreal' above him">
         </div>
     </header>
@@ -59,18 +60,18 @@
             </div>
 
             <div class="images-trending">
-                <img src="images/img-forhonor.png" alt="for honor game cover">
-                <img src="images/img-akali.png" alt="League of Legends Akali skin">
-                <img src="images/img-crysis.png" alt="Crysis game cover">
-                <img src="images/img-catgame.png" alt="Stray game frame">
+                <img src="../images/img-forhonor.png" alt="for honor game cover">
+                <img src="../images/img-akali.png" alt="League of Legends Akali skin">
+                <img src="../images/img-crysis.png" alt="Crysis game cover">
+                <img src="../images/img-catgame.png" alt="Stray game frame">
             </div>
 
             <div>
                 <ul class="followers">
-                    <li class="fire-list"><img src="images/img-fire.png" alt="fire">40 followers</li>
-                    <li class="fire-list"><img src="images/img-fire.png" alt="fire">40 followers</li>
-                    <li class="fire-list"><img src="images/img-fire.png" alt="fire">40 followers</li>
-                    <li class="fire-list"><img src="images/img-fire.png" alt="fire">40 followers</li>
+                    <li class="fire-list"><img src="../images/img-fire.png" alt="fire">40 followers</li>
+                    <li class="fire-list"><img src="../images/img-fire.png" alt="fire">40 followers</li>
+                    <li class="fire-list"><img src="../images/img-fire.png" alt="fire">40 followers</li>
+                    <li class="fire-list"><img src="../images/img-fire.png" alt="fire">40 followers</li>
                 </ul>
             </div>
         </section>
@@ -86,9 +87,9 @@
                             has been the industry's standard dummy text <br>ever since the 1500s.</p>
                     </div>
                     <div class="spider-images">
-                        <img src="images/img-spider.png" alt="Spider-Man in free fall opening his arms"
+                        <img src="../images/img-spider.png" alt="Spider-Man in free fall opening his arms"
                             class="img-banner">
-                        <img src="images/img-balls.png" class="img-balls">
+                        <img src="../images/img-balls.png" class="img-balls">
                     </div>
                 </div>
             </div>
@@ -103,7 +104,7 @@
                 </p>
             </div>
             <div class="icons-mountain">
-                <img src="images/icons.png" alt="">
+                <img src="../images/icons.png" alt="">
             </div>
         </section>
 
@@ -115,18 +116,18 @@
             </div>
             <div class="img-project">
                 <div class="img-project-row">
-                    <img src="images/img-rc1.png" alt="Arcade room">
-                    <img src="images/img-rc2.png" alt="Man playing in his desktop">
-                    <img src="images/img-rc3.png" alt="computer setup">
+                    <img src="../images/img-rc1.png" alt="Arcade room">
+                    <img src="../images/img-rc2.png" alt="Man playing in his desktop">
+                    <img src="../images/img-rc3.png" alt="computer setup">
                 </div>
                 <div class="img-project-row">
-                    <img src="images/img-rc4.png" alt="Tv with the text 'Play has no limits' written on the screen">
-                    <img src="images/img-rc5.png" alt="various casino machines">
-                    <img src="images/img-rc6.png" alt="Two arcade machines">
+                    <img src="../images/img-rc4.png" alt="Tv with the text 'Play has no limits' written on the screen">
+                    <img src="../images/img-rc5.png" alt="various casino machines">
+                    <img src="../images/img-rc6.png" alt="Two arcade machines">
                 </div>
             </div>
             <div class="button-project-container">
-                <button class="button-project" onclick="window.location.href='error.html'">SEE ALL</button>
+                <button class="button-project" onclick="window.location.href='../pages/error.html'">SEE ALL</button>
             </div>
         </section>
 
@@ -143,9 +144,13 @@
                         <br>We promise not to spam you! </p>
                 </div>
                 <div class="input-subscription">
-                    <input type="email" placeholder="Enter email address">
-                    <button>Continue</button>
+                    <input type="email" id="subscription-email" placeholder="Enter email address">
+                    <button id="subscription-button" disabled>Continue</button>
                 </div>
+            </div>
+            <div class="success-message" id="success-message">
+                <h1>Subscription Successful!</h1>
+                <p>Thank you for subscribing. We will keep you updated with the latest news.</p>
             </div>
         </section>
     </main>
@@ -162,10 +167,10 @@
             <div class="footer-links">
                 <h3>About us</h3>
                 <ul>
-                    <li><a href="error.html">Zeux</a></li>
-                    <li><a href="error.html">Portfolio</a></li>
-                    <li><a href="error.html">Careers</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
+                    <li><a href="../pages/error.html">Zeux</a></li>
+                    <li><a href="../pages/error.html">Portfolio</a></li>
+                    <li><a href="../pages/error.html">Careers</a></li>
+                    <li><a href="../pages/contact.html">Contact us</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
@@ -175,12 +180,12 @@
                 <p>+908 89097 890</p>
             </div>
             <div class="footer-social">
-                <a href="https://www.facebook.com"><img src="images/facebook.png" class="media-object"
+                <a href="https://www.facebook.com"><img src="../images/facebook.png" class="media-object"
                         alt="facebook"></a>
-                <a href="https://www.instagram.com"><img src="images/instagram.png" class="media-object"
+                <a href="https://www.instagram.com"><img src="../images/instagram.png" class="media-object"
                         alt="instagram"></a>
-                <a href="https://www.twitter.com"><img src="images/twitter.png" class="media-object" alt="twitter"></a>
-                <a href="https://www.linkedin.com"><img src="images/linkedin.png" class="media-object"
+                <a href="https://www.twitter.com"><img src="../images/twitter.png" class="media-object" alt="twitter"></a>
+                <a href="https://www.linkedin.com"><img src="../images/linkedin.png" class="media-object"
                         alt="linkedin"></a>
             </div>
             <div class="footer-bottom">
@@ -189,7 +194,7 @@
         </div>
     </footer>
 
-    <script type="module" src="script.js"></script>
+    <script src="../js/subscription.js"></script>
 </body>
 
 </html>
