--- a/pages/success.html
+++ b/pages/success.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Success</title>
-    <link rel="stylesheet" href="styles/sucess.css">
+    <link rel="stylesheet" href="../styles/sucess.css">
 </head>
 <body>
     <div class="success-message">
         <h1>Form Submitted Successfully!</h1>
         <p>Thank you for getting in touch. We will get back to you soon.</p>
     </div>
-    <script src="js/success.js"></script>
+    <script src="../js/success.js"></script>
 </body>
 </html>
