fix: fixed the section 4 style

--- a/pages/index.html
+++ b/pages/index.html
@@ -15,9 +15,6 @@
 </head>
 
 <body>
-
-    <!--------------------header----------------------->
-
     <header>
         <a href="../pages/index.html" class="logo-link">
             <div class="logo">LOGO</div>
@@ -37,11 +34,8 @@
         </div>
     </header>
 
-    <!--------------------main----------------------->
 
     <main>
-
-        <!--------------------Section 1----------------------->
         <section class="controller">
             <div class="text-controller">
                 <h3>Proved By prodesigner</h3>
@@ -52,7 +46,6 @@
             </div>
         </section>
 
-        <!--------------------Section 2----------------------->
         <section class="trending-games">
             <div class="title-trending">
                 <h2>Currently Trending Games</h2>
@@ -76,7 +69,6 @@
             </div>
         </section>
 
-        <!--------------------Section 3----------------------->
         <section class="spider">
             <div>
                 <h2>Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</h2>
@@ -95,7 +87,6 @@
             </div>
         </section>
 
-        <!--------------------Section 4----------------------->
         <section class="mountain">
             <div class="text-mountain">
                 <h3>Lorem Ipsum is simply dummy text of the printing<br>and typesetting industry.</h3>
@@ -104,11 +95,43 @@
                 </p>
             </div>
             <div class="icons-mountain">
-                <img src="../images/icons.png" alt="">
+                <div class="icons-mountain-top">
+                    <div class="item-mountain">
+                        <img src="../images\icons\icon-cell.png" alt="Mobile Game Development">
+                        <p>Mobile Game Development</p>
+                        <img src="../images\icons\icon-arrow.png" class="arrow" alt="Arrow">
+                    </div>
+                    <div class="item-mountain">
+                        <img src="../images\icons\icon-desktop.png" alt="PC Game Development">
+                        <p>PC Game Development</p>
+                        <img src="../images\icons\icon-arrow.png" class="arrow" alt="Arrow">
+                    </div>
+                    <div class="item-mountain">
+                        <img src="../images\icons\icon-ps4.png" alt="PS4 Game Development">
+                        <p>PS4 Game Development</p>
+                        <img src="../images\icons\icon-arrow.png" class="arrow" alt="Arrow">
+                    </div>
+                    <div class="item-mountain">
+                        <img src="../images\icons\icon-guy.png" alt="AR/VR Solutions">
+                        <p>AR/VR Solutions</p>
+                        <img src="../images\icons\icon-arrow.png" class="arrow" alt="Arrow">
+                    </div>
+                </div>
+                <div class="icons-mountain-bot">
+                    <div class="item-mountain">
+                        <img src="../images\icons\icon-tv.png" alt="AR/VR Design">
+                        <p>AR/VR Design</p>
+                        <img src="../images\icons\icon-arrow.png" class="arrow" alt="Arrow">
+                    </div>
+                    <div class="item-mountain">
+                        <img src="../images\icons\icon-cube.png" alt="3D Modelings">
+                        <p>3D Modelings</p>
+                        <img src="../images\icons\icon-arrow.png" class="arrow" alt="Arrow">
+                    </div>
+                </div>
             </div>
         </section>
 
-        <!--------------------Section 5----------------------->
         <section class="recent-project">
             <div class="text-project">
                 <h2>Our Recent Projects</h2>
@@ -131,7 +154,6 @@
             </div>
         </section>
 
-        <!--------------------Section 6----------------------->
         <section class="subscription">
             <div class="tittle-subscription">
                 <h2>Lorem Ipsum</h2>
@@ -155,8 +177,6 @@
         </section>
     </main>
 
-
-    <!--------------------footer----------------------->
     <footer>
         <div class="footer-content">
             <div class="footer-text">
