fix: correct the subscription on the contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -114,6 +114,10 @@
                     <button id="subscription-button" disabled>Continue</button>
                 </div>
             </div>
+            <div class="success-message" id="success-message">
+                <h1>Subscription Successful!</h1>
+                <p>Thank you for subscribing. We will keep you updated with the latest news.</p>
+            </div>
         </section>
     </main>
 
